...
            "value" : "This round is over!"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Этот раунд окончен!"
          }
        }
      }
    },
    "textQuestion" : {
      "extractionState" : "manual",
...
